refactor: 파일구조 정리

--- a/dataset/analysis_results/kaggle_cataract_nand.ipynb
+++ b/dataset/analysis_results/kaggle_cataract_nand.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,7 @@
     "\n",
     "sys.path.append(\"../\")\n",
     "\n",
-    "from utils.analysis_utils import get_all_paths, get_all_image_paths, get_image_w_h, get_stats, count_files, count_formats, count_image_sizes, show_random_image"
+    "from analysis_utils import get_all_paths, get_all_image_paths, get_image_w_h, get_stats, count_files, count_formats, count_image_sizes, show_random_image"
    ]
   },
   {
@@ -590,7 +590,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "common-env",
+   "display_name": "a-eye-lab-env",
    "language": "python",
    "name": "python3"
   },
